[tool.poetry]
name = "addr-jp-api"
version = "0.1.0"
description = ""
authors = ["Shi Han NG <shihanng@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
datasette = "^0.44"
csvs-to-sqlite = "^1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
